Fix image scaling when they are too large in the chat

--- a/app/widgets/Chat/chat.css
+++ b/app/widgets/Chat/chat.css
@@ -95,6 +95,7 @@
 
 #chat_widget li div.bubble.sticker.file img:not(.emoji):not(.hfr) {
     max-height: 170px;
+    object-fit: cover;
 }
 
 #chat_widget ul:after {
